--- a/main.css
+++ b/main.css
@@ -1,24 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Ubuntu:ital,wght@0,500;0,700;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+
 body {
-    background-color: #e6e6e6;
+    background-color: #121212;
+    margin: auto;
 }
 
 .header{
-    background-color: #919191;
+    background-color: rgba(255, 255, 255, 0.05);
     width: 100%;
-    margin: none;
-    height: 10em;
-    position: absolute;
-    border: none;
+    height: 3em;
+    position: fixed;
+    text-align: center;
 }
 
 .header .top_bar{
-    text-align: right;
+    /* background-color: #eeeeee; */
+    width: 40%;
+    margin-left: 30%;
+    /* margin-top: 1em; */
+    padding: 1em;
+    /* transform: translate( 50%, 0%); */
+    display: flex;
+    justify-content: space-between;
 }
 
-.header .title{
-    transform: translate( 50%, 200%);
-    left: 50%;
-    top: 50%;
+.header .top_bar a{
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    color: #ffffff;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 1em;
+    /* margin: 0em 1em 0em 10em; */
+    text-decoration: none;
+}
+
+.header .top_bar a:hover{
+    cursor: pointer;
+    color: rgba(255, 255, 255, .7);
+}
+
+.container{
+    background-color: rgba(255, 255, 255, .15);
+    /* margin-top: 3em; */
+    transform: translate( 0%, 3em );
+    margin-left: 15%;
+    margin-right: 15%;
+    height: 100%;
+}
+
+.title{
+    /* transform: translate( 50%, 0%); */
+    /* position: sticky; */
+    /* left: 50%;
+    top: 50%; */
+    color: #ffffff;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 3em;
+    font-style: italic;
 }
 
 
