--- a/login/login.css
+++ b/login/login.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Ubuntu:ital,wght@0,500;0,700;1,500&display=swap');
 
 body{
-    background: url(background_login.jpg);
+    background: url(assets/background_login.jpg);
     background-size: cover;
     /* background-repeat: no-repeat; */
 }
