--- a/login/login.css
+++ b/login/login.css
@@ -6,6 +6,26 @@ body{
     /* background-repeat: no-repeat; */
 }
 
+.back{
+    background-color: #385170;
+    height: 2em;
+    width: 2em;
+    padding: .5em;
+    text-align: right;
+}
+
+.back .line_1{
+    width: 100%;
+    height: .35em;
+    transform: rotate(45);
+}
+
+.back .line_2{
+    width: 100%;
+    height: .35em;
+    transform: rotate(-45);
+}
+
 .login{
     position: absolute;
     top: 50%;
