--- a/login/login.css
+++ b/login/login.css
@@ -7,25 +7,31 @@ body{
 }
 
 .back{
-    background-color: none;
+    z-index: 1;
+    position: absolute;
+    top: 21.5%;
+    left: 69%;
+    /* background-color: #eeeeee; */
     height: 2em;
     width: 2em;
     padding: .5em;
-    float: right;
+    /* transform: translate(50%); */
 }
 
 .back .line_1{
-    background-color: #385170;
+    background-color: #1b1b1b;
     width: 1.75em;
     height: .35em;
-    transform: rotate(45);
+    transform: rotate(45deg);
+    margin-top: 1em;
 }
 
 .back .line_2{
-    background-color: #385170;
+    background-color: #1b1b1b;
     width: 1.75em;
     height: .35em;
-    transform: rotate(-45);
+    transform: rotate(-45deg);
+    margin-top: -.35em;
 }
 
 .login{
